Fix baseline statistics margin on small screen
Part of epic #12142 Baseline v1

Add vertical margin between statistics when line break on small screen

--- a/themes/BurningParrot/baseline/_baseline-content.scss
+++ b/themes/BurningParrot/baseline/_baseline-content.scss
@@ -39,6 +39,7 @@
     min-width: 12em;
     height: 7em;
     margin-right: 2em;
+    margin-bottom: 2em;
     padding-left: 1em;
     border-radius: .2em;
 }
